# willow-application-server

./: .editorconfig  .gitignore  Dockerfile  Home.py  README.md  alembic.ini  api.py  default_config.json  default_nvs.json  docker-compose.yml  entrypoint-api.sh  entrypoint-ui.sh  entrypoint.sh  main.py  pyproject.toml  requirements.txt  ui.py  utils.sh  uvicorn-log-config.json
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml
.streamlit/: config.toml
app/: const.py  main.py  settings.py
app/db/: main.py  models.py
app/internal/: client.py  config.py  connmgr.py  notify.py  openai.py  srmodels.py  wake.py  was.py
app/internal/command_endpoints/: __init__.py  ha_rest.py  ha_ws.py  main.py  mqtt.py  openhab.py  rest.py
app/pytest/: __init__.py  mock.py  test_config.py  test_construct_wis_tts_url.py  test_get_release_url.py
app/pytest/api/: test_ota.py  test_release.py
app/routers/: asset.py  client.py  config.py  info.py  model.py  ota.py  release.py  status.py
command_endpoints/: README.md  ha_rest.py  ha_ws.py  rest.py
migrations/: env.py
migrations/versions/: 8f14a11346c4_initial_schema.py
misc/: migrate_devices.py
pages/: 1_Clients.py  2_Configuration.py
shared/: was.py
