[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.15.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "dnspython==2.6.1",
    "docopt==0.6.2",
    "email-validator==2.2.0",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "num2words==0.5.14",
    "paho-mqtt==2.1.0",
    "psycopg2==2.9.10",
    "pydantic==2.11.1",
    "pydantic-core==2.33.0",
    "pydantic-extra-types==2.10.4",
    "pydantic-settings==2.9.1",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "pyyaml==6.0.1",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "sqlmodel==0.0.24",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "ujson==5.10.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
]
